--- a/journal/201812-short.md
+++ b/journal/201812-short.md
@@ -16,6 +16,8 @@ December was a month of considerable progress, with developer activity, as alway
 
 6.  Three new proposals were submitted to Politeia in December, and the Decred Bug Bounty Program passed, allowing for compensation of up to $25,000 payable in Decred to anyone who identifies bugs in Decred. More info https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1
 
+7. Decred in the Media. Highlights for the month included an extensive interview of Murad Madhudov on Tone Vays' YouTube show, Decred founded pronouncing the Death of the ICO, and @Haon's piece on Decred Fork Resistance. Full media list here.
+
 Dev activity stats for December: 230 active PRs, 196 master commits, 33K added and 106K deleted lines spread across 8 repositories. Contributions came from 3-9 developers per repository.
 
 In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 17,016 DCR and spent 12,570 DCR. Using December's daily average DCR/USD rate of $17.5, this is $298K received and $220K spent. As these payments were for work completed in November, it is also informative to consider them in the context of the November average daily rate of $32.5 - in which case the USD received/spent figures are $553K/$409K.
@@ -28,27 +30,6 @@ Staking: 30-day average ticket price was 103 DCR (+0) per dcrstats.com. The pric
 
 Nodes: As of Jan 1 there were 192 public listening nodes and 253 normal ones per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 1.5% are v1.5.0(pre) dev builds, 1.8% on v1.4.0(rc1), 5.3% on v1.4.0(pre) (-1.2%), 55% on v1.3.0 (+5%), 20% on v1.2.0 (-5%), 10% on v1.1.2 (-1%), 4% on v1.1.0 (-1%).
 
-
-## Media
-
-Selected articles:
-
-* Detailed analysis of Decred fork resistance by @Haon ([medium](https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7))
-* Fundamental Pick: Decred by BBOD Research ([blog.bbod.io](https://blog.bbod.io/decred-dcr-fundamental-analysis/), also [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404313596447316959) and [Japanese](https://cointyo.jp/article/10005567))
-* Decred Co-founder Pronounces 2018 as the "Death of the ICO Model" ([nulltx.com](https://nulltx.com/decred-co-founder-pronounces-2018-as-the-death-of-the-ico-model/))
-* 2018 in 4 Words - ICOs and Ethereum Died ([ccn.com](https://www.ccn.com/2018-in-4-words-icos-and-ethereum-are-dead/))
-* The practical cypherpunk: Marco Peereboom of Decred ([coinrivet.com](https://coinrivet.com/the-practical-cypherpunk-marco-peereboom-of-decred/))
-* Decred: Governance and Funding Reimagined ([51pct.io](https://51pct.io/decred-governance-and-funding-reimagined/))
-
-Videos:
-
-* On The Record w/ Murad Mahmudov - Bitcoin for 2019 on Tone Vays show ([youtube](https://www.youtube.com/watch?v=pjXzrAOhAPo), Decred explanation around 1h mark)
-
-Audio:
-
-* Free Talk Live 2018-10-27 Interview with Marco Peereboom of Decred at the Texas Bitcoin Conference ([soundcloud](https://soundcloud.com/freetalklive/free-talk-live-2018-10-27#t=40:50), _missed in Oct issue_)
-* Unchained episode 100, Past Guests and Listeners Take Over the Show ([unchainedpodcast.co](http://unchainedpodcast.co/100th-episode-past-guests-and-listeners-take-over-the-show-ep100), @joshuam at 55:12)
-* Episode 18: Murad Mahmudov on Bitcoin ([didyouknowcrypto.com](http://didyouknowcrypto.com/episode-18-murad-on-bitcoin/)). Topics covered are utopianism, Austrian economics, the coming recession, the future of Bitcoin, and that Decred should be in top 3.
 
 ## Markets
 
