--- a/journal/201812-short.md
+++ b/journal/201812-short.md
@@ -24,18 +24,18 @@ In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 
 ## Network
 
-Hashrate: December's hashrate opened at around 167 Ph/s and closed around 183 Ph/s, peaking at 207 Ph/s and bottoming at 110 Ph/s throughout the course of the month. For the most part, the average was 150 Ph/s. As of Jan 10, pool hashrate distribution: poolin 34%, F2pool 27%, UUPool 7.4%, btc.com 7%, Luxor 3.8%, BeePool 2.6%, coinmine 1.1%, others are 17% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: December's hashrate open: 167 Ph/s and closed: 183 Ph/s, max: 207 Ph/s min: 110 Ph/s More info, including stakepool distribution can be round at [dcrstats.com](https://dcrstats.com/pow).
 
-Staking: 30-day average ticket price was 103 DCR (+0) per dcrstats.com. The price varied between 101 DCR and 107 DCR. Locked amount was 4.14-4.23 million DCR, which corresponded to 46.3-47.1% of the available supply.
+Staking: 30-day average ticket price was 103 DCR (+0) per dcrstats.com. MinL 101 DCR, max: 107 DCR. 
 
 Nodes: As of Jan 1 there were 192 public listening nodes and 253 normal ones per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 1.5% are v1.5.0(pre) dev builds, 1.8% on v1.4.0(rc1), 5.3% on v1.4.0(pre) (-1.2%), 55% on v1.3.0 (+5%), 20% on v1.2.0 (-5%), 10% on v1.1.2 (-1%), 4% on v1.1.0 (-1%).
 
 
 ## Markets
 
-In December DCR was trading between USD 14.2-21.4 / BTC 0.0042-0.0058. The average daily rate was $17.5. A short price rise to USD 20.9 / BTC 0.0058 happened on volume increased to USD 5-6 million compared to USD 0.8-1.2 million on other days. Note that the trading volume data is not reliable, as noted below.
+In December DCR was trading between USD 14.2-21.4 / BTC 0.0042-0.0058. The average daily rate was $17.5. 
 
-Decred is set for continued expansion and acceleration through 2019. Happy New Year to all readers from the Decred Journal team!
+Decred is set for continued expansion and acceleration through 2019. Happy New Year to all readers, we'll see you next month!
 
 ## About This Issue
 
