--- a/journal/201812-short.md
+++ b/journal/201812-short.md
@@ -24,7 +24,7 @@ In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 
 ## Network
 
-Hashrate: December's hashrate open: 167 Ph/s and closed: 183 Ph/s, max: 207 Ph/s min: 110 Ph/s More info, including stakepool distribution can be round at [dcrstats.com](https://dcrstats.com/pow).
+December Hashrate open: 167 Ph/s and closed: 183 Ph/s, max: 207 Ph/s min: 110 Ph/s More info, including stakepool distribution can be round at [dcrstats.com](https://dcrstats.com/pow).
 
 Staking: 30-day average ticket price was 103 DCR (+0) per dcrstats.com. MinL 101 DCR, max: 107 DCR. 
 
