--- a/journal/201901.md
+++ b/journal/201901.md
@@ -157,6 +157,8 @@ Custom Decred merch on the Decredible shop https://www.reddit.com/r/decred/comme
 
 Important notice: new batch of Stakey plushies is available! https://www.reddit.com/r/decred/comments/ahalex/new_batch_of_stakey_plushies_available/
 
+@Matt D started [Decred Aggregator](https://t.me/DecredAgg) in Telegram that aims to collect news, press, videos, podcasts, Decred announcements, trending tweets and Reddit posts, as well as market stats. Introduction and motivation was shared in [this chat]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154825336714293nfWdU:decred.org).
+
 ## Events
 
 Attended:
@@ -169,11 +171,13 @@ Upcoming:
 
 {announcements from events people}
 
+Open source and hacker oriented events like DEFCON, CCC and FOSDEM were discussed https://github.com/xaur/decred-issues/issues/83
+
 ## Media
 
 [blog.dcrclub.org](https://blog.dcrclub.org/) is a new website in Chinese that collects various articles and translations in one place. The source hosted [on GitHub](https://github.com/0x5826/blog.dcrclub.org) makes it easy to contribute or mirror the website on other domain for more resiliency. Credits to @TogT4V (Telegram) for starting the site.
 
-[Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia is under attack again. On Jan 8 user R2d232h2 [removed](https://en.wikipedia.org/w/index.php?title=Decred&diff=prev&oldid=877407037) a bunch of "bad sources". On Jan 10 the same user [vandalized](https://en.wikipedia.org/w/index.php?title=Decred&diff=next&oldid=877407037) the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 the second purge was reverted and R2d232h2 was banned as sockpuppet, but next day the removal was applied again. As it stands after the cutting, the page is very small and has all [votes](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media are [not good enough](https://en.wikipedia.org/wiki/Talk:Decred#Request_edit_on_12_January_2019) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. Extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547202592212vKSyw:decred.org) ([continued](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15472392171087ucpIb:decred.org)), including possilble solutions. The page was deleted on Jan 18. More details are captured in [this issue](https://github.com/xaur/decred-issues/issues/79).
+[Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia is under attack again. On Jan 8 user R2d232h2 [removed](https://en.wikipedia.org/w/index.php?title=Decred&diff=prev&oldid=877407037) a bunch of "bad sources". On Jan 10 the same user [vandalized](https://en.wikipedia.org/w/index.php?title=Decred&diff=next&oldid=877407037) the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 the second purge was reverted and R2d232h2 was banned as sockpuppet, but next day the removal was applied again. As it stands after the cutting, the page is very small and has all [votes](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media are [not good enough](https://en.wikipedia.org/wiki/Talk:Decred#Request_edit_on_12_January_2019) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. Extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547202592212vKSyw:decred.org) ([continued](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15472392171087ucpIb:decred.org)), including possilble solutions. On Jan 18 the page was deleted and removed from List of cryptocurrencies that contains more notable entries. More details are captured in [this issue](https://github.com/xaur/decred-issues/issues/79).
 
 The good news, is it [can mean](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15474897963391hhDDU:decred.org) Decred is moving in the right direction.
 
@@ -199,6 +203,7 @@ Articles:
 * https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments
 * Binance info listed a new rating report([EN](https://info.binance.com/en/rate/detail/2506),[CN](https://info.binance.com/cn/rate/detail/2493)) of Decred by [Evaluape](https://www.evaluape.io/project/browse/54155/report)
 * The role of Decred voters in defending against majority attacks by @richardred ([medium](https://medium.com/@richardred/the-role-of-decred-voters-in-defending-against-majority-attacks-ec658af0a8fd))
+* https://blog.goodaudience.com/decentralized-off-chain-governance-in-the-context-of-digital-currencies-ef6db7d97412
 
 Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
@@ -208,12 +213,14 @@ Translations:
 
 Videos:
 
-* {}
+* Why 2019 will be the biggest year for Decred by Hack Crypto - interview with @joshuam from TNABC https://www.youtube.com/watch?v=Kyihc6Uh4XA
+* Decred Realized Disputes in Blockchain Projects Were Inevitable: Joshua Buirski by Bitsonline from TNABC https://www.youtube.com/watch?v=CUxDxJ4YAUA
 
 Audio:
 
 * https://badcryptopodcast.com/2019/01/08/autonomous-crypto-decred/
 * 51percent Crypto Research podcast: Noah Pierau and Tom Shaughnessy talk about blockchain governance in Decred, Bitcoin, Dash and Ethereum ([itunes](https://itunes.apple.com/us/podcast/noah-pierau-on-blockchain-governance-decred-bitcoin/id1438148082?i=1000428113722&mt=2))
+* How Decred Revolutionizes Funding in Crypto with Marco Peereboom ([evolvement.io](https://evolvement.io/how-decred-revolutionizes-funding-in-crypto-with-marco-peereboom/), with mirrors on soundcloud, youtube and more) - Michael Nye and Marco discuss current state of crypto, how Decred began, PoW vs PoS, Decred's funding model and more.
 
 ## Community Discussions
 
