ETC, EOS and ETH bits of relevant external

--- a/journal/201901.md
+++ b/journal/201901.md
@@ -282,19 +282,17 @@ ICO projects withdrew ~441k ETH from treasuries, which can impact the whole mark
 
 {PoW, ASIC resistance, tech}
 
-{ETC 51% attack}
+Ethereum Classic (ETC) was subject to a 51% attack, with the alert being raised by [CoinNess](https://www.coinness.com/news/198264) on Jan 7.  Coinbase then [announced](https://blog.coinbase.com/ethereum-classic-etc-is-currently-being-51-attacked-33be13ce32de) that it had detected a deep reorganization of the ETC chain and had halted ETC transactions. The article lists a number of reorgs that involved double spends, putting the total amount involved at $1.1 million, across 15 distinct reorg events. Coinbase was not itself a target for these attacks. The Gate.io exchange subsequently [announced](https://www.gate.io/article/16735) that it had been targeted and had lost around $200k, and that it would absorb the loss. Gate.io also significantly increased the number of confirmations required for ETC deposits. In an unusual development, the attacker then [returned](https://www.gate.io/article/16740) $100k of the ETC to gate.io, they have tried but failed to make contact with the attacker and do not know the reason for the return of funds. Other victims of the ETC double spends have not come forward. 
 
-* {write how did it happen, estimated cost to attack, damage, response}
-* https://ethereumworldnews.com/ethereum-classic-etc-developers-2019/
-* maybe https://www.reddit.com/r/ethereum/comments/adnd0x/etc_attack_what_is_the_cost_to_mount_on_eth/
-* https://www.ccn.com/ethereum-classic-losses-top-1-million-after-51-attack-coinbase-research/
-* https://twitter.com/peterktodd/status/1082500762490597376
+Ethereum's developers [decided](https://www.coindesk.com/ethereum-developers-give-tentative-greenlight-to-asic-blocking-code) (tentatively)  on Jan 4 to go ahead with a change of mining algorithm from Ethash to ProgPoW. This move is intended to stop ASICs from mining Ethereum.
 
-{ETH ProgPoW and governance news -- worthy?}
+Ethereum developers also [delayed](https://breakermag.com/what-we-know-about-the-vulnerability-behind-ethereums-rollback-of-constantinople/) the Constantinople hard fork on Jan 15 after a security vulnerability which would have enabled a "reentrancy attack" was [detected](https://medium.com/chainsecurity/constantinople-enables-new-reentrancy-attack-ace4088297d9). 
 
 Fundamentals of Proof of Work [article](https://blog.sia.tech/fundamentals-of-proof-of-work-beaa68093d2b) by David Vorick makes the case for exclusive hardware cryptocurrencies and contrasts them with shared hardware cryptocurrencies that suffer from multiple issues, especially ASIC-resistant ones. One of the issues with non specialized hardware is hashrate marketplaces. They allow hardware owners to better profit from their hardware by not caring about which coin they mine, even if the hashrate is rented to attackers. Decred benefits from specialized hardware but is not "exclusive" to it, other coins exist or may appear in future that use the same mining algorithm. What protects Decred is the (current) hashrate dominance for its algorithm and the ability to strip mining rewards from the blocks.
 
 The first round of Aragon proposal voting [concluded](https://blog.aragon.org/final-results-from-aragon-network-vote-1/) on Jan 26. Of the 12 submitted proposals, 3 were excluded from the vote by the Aragon Foundation (1 because of lack of full time leadership and engineering talent, 2 were excluded to reduce cognitive load on voters). 8 of the 9 proposals voted on were [approved](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) by ANT holders, with one proposal (to change the voting period duration from 48 hours to 1 week) rejected. ANT participation rates [ranged](https://mainnet.aragon.org/#/governance.aragonproject.eth/0x277bfcf7c2e162cb1ac3e9ae228a3132a75f83d4) from 2.3 to 7.8%. The most expensive [proposal](https://github.com/aragon/flock/blob/master/teams/Aragon%20One/2019.md) to be approved will pay Aragon One $4 million for 2019 operating costs plus an incentive package consisting of 1.675 million ANT on a 5 year vesting schedule. An incentive in ANT with a vesting schedule was included as part of most proposals, in addition to the main cost to be paid in DAI. In total this round of approved proposals will cost around $5.94 million + 2.52 million ANT (~$880k).
+
+The EOS referendum system for constitutional amendments went [live](https://medium.com/@eosnationbp/the-fate-of-eos-is-in-the-hands-of-token-holders-3d345147ef6) on Jan 11. So far 77 proposals have been [submitted](https://bloks.io/vote/referendums). The voting period for these proposals is flexible and specified by the submitter, some last as long as four months. The proposals with the most votes (as of Jan 31) have votes from around 2% of circulating EOS, but most proposals have very low participation (only 10 have greater than 0.5% participation). So far the most popular proposals are to [change](https://bloks.io/vote/referendums/rex4all) where the fees for short names and RAM purchases go, [delete](https://bloks.io/vote/referendums/decaf) the EOS Core Arbitration Forum, and [burn](https://bloks.io/vote/referendums/burnsaving) the inflation funds in eosio.saving (to be used for funding the worker proposal system).
 
 {governance, forks, chain splits, controversy}
 
