--- a/journal/201901.md
+++ b/journal/201901.md
@@ -4,6 +4,8 @@
 
 {introduction, major news of the month}
 
+{Android release}
+
 ## Development
 
 {per-project summary, drop items without updates}
@@ -29,9 +31,11 @@ An issue was discovered during the testing of RC1: the change to reverse UTXO se
 * Developers are discussing [automated e2e testing](https://github.com/decred/politeiagui/issues/976) and [QA checklist](https://github.com/decred/politeiagui/issues/977) for major changes.
 * Large code refactoring discussion [started](https://github.com/decred/politeiagui/issues/990) to address complexity, performance and dev productivity issues. First proposed [solution](https://github.com/decred/politeiagui/issues/990#issuecomment-454535696) is to use GraphQL.
 
-[Android wallet](https://github.com/decred/dcrandroid): 3rd release candidate was published on Google Play Store for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). Test coins can be requested in the [faucet](http://faucet.decred.org/). Bug reports are welcome [on GitHub](http://github.com/decred/dcrandroid/issues).
+[dcrandroid](https://github.com/decred/dcrandroid): 3rd release candidate was published on Google Play Store for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). Test coins can be requested in the [faucet](http://faucet.decred.org/). Bug reports are welcome [on GitHub](http://github.com/decred/dcrandroid/issues).
 
-[iOS wallet](https://github.com/raedahgroup/dcrios): {}
+https://www.reddit.com/r/decred/comments/am7j40/decred_wallet_for_android_v10_released/
+
+[dcrios](https://github.com/raedahgroup/dcrios): {}
 
 Trezor: {}
 
@@ -54,7 +58,7 @@ Ticket splitting:
 * Guide for [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/)
 * [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) guide by @jz was polished and added to the docs.
 * new [Address Details](https://docs.decred.org/advanced/address-details/) page explains address format an lists all possible kinds of addresses
-* deep dive security discussion in #documentation, it will be beneficial to the whole space to assemble thorough OPSEC guidelines https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$15475629904666wNucj:decred.org
+* deep dive security discussion in #documentation, it will be beneficial to the whole space to assemble thorough OPSEC guidelines https://github.com/xaur/decred-issues/issues/101
 
 [decred.org](https://github.com/decred/dcrweb):
 
@@ -96,6 +100,8 @@ Intro blog post https://medium.com/decred/decred-launches-debug-decred-bug-bount
 
 @oregonisaac {@isaac?} is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the RPF document was posted and discussed here https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org , there is some concensus to use 2-phase voting: first vote to see if stakeholders want ATMs at all, and second to chose a specific implementation. Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
 
+@Dustorf is drafting proposals for [marketing budget]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [events budget](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) to improve transparency and engage stakeholders.
+
 Discussions:
 
 * attack vector: offer to airdrop some token to stakeholders in return for funding a proposal https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15468733339790vCEoH:decred.org
@@ -126,12 +132,17 @@ Exchange integrations:
 
 * https://twitter.com/bitturkcom/status/1082201314912862209
   * wait until this is resolved
+* Brazilian exchange BitJa [announced](https://twitter.com/bitjabr/status/1090066185302036480) DCR/BRL fiat pair.
 
 {OTC desks}
 
 {payment processors}
 
 {wallets}
+
+Ellipal wallet [announced](https://twitter.com/ellipalwallet/status/1089850526202613760) Decred support in latest firmware release. {keep? anybody used it?}
+
+Exodus wallet [integrated](https://twitter.com/exodus_io/status/1090263399122923520) USDC, a USD-pegged token by Circle.
 
 ## Adoption
 
@@ -188,11 +199,15 @@ Upcoming:
 
 Open source and hacker oriented events like DEFCON, CCC and FOSDEM were discussed https://github.com/xaur/decred-issues/issues/83
 
+@Matt D [suggested](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154914199426705SWAOr:decred.org) event calendar workflow using Trello.
+
 ## Media
 
 [blog.dcrclub.org](https://blog.dcrclub.org/) is a new website in Chinese that collects various articles and translations in one place. The source hosted [on GitHub](https://github.com/0x5826/blog.dcrclub.org) makes it easy to contribute or mirror the website on other domain for more resiliency. Credits to @TogT4V (Telegram) for starting the site.
 
 @butterfly published some articles about Decred in [Arabic blog](https://decred-arabia.blogspot.com/2019/01/blog-post.html).
+
+@michae2xl [started](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$1548814257223928fVjiP:matrix.org) Portuguese podcasts that are available on [Soundcloud](https://soundcloud.com/user-770106247/), Spotify, Apple Podcasts and Google Podcasts - search "Decred Brasil".
 
 [Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia is under attack again. On Jan 8 user R2d232h2 [removed](https://en.wikipedia.org/w/index.php?title=Decred&diff=prev&oldid=877407037) a bunch of "bad sources". On Jan 10 the same user [vandalized](https://en.wikipedia.org/w/index.php?title=Decred&diff=next&oldid=877407037) the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 the second purge was reverted and R2d232h2 was banned as sockpuppet, but next day the removal was applied again. As it stands after the cutting, the page is very small and has all [votes](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media are [not good enough](https://en.wikipedia.org/wiki/Talk:Decred#Request_edit_on_12_January_2019) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. Extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547202592212vKSyw:decred.org) ([continued](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15472392171087ucpIb:decred.org)), including possilble solutions. On Jan 18 the page was deleted and removed from List of cryptocurrencies that contains more notable entries. More details are captured in [this issue](https://github.com/xaur/decred-issues/issues/79).
 
@@ -222,6 +237,7 @@ Articles:
 * The role of Decred voters in defending against majority attacks by @richardred ([medium](https://medium.com/@richardred/the-role-of-decred-voters-in-defending-against-majority-attacks-ec658af0a8fd))
 * https://blog.goodaudience.com/decentralized-off-chain-governance-in-the-context-of-digital-currencies-ef6db7d97412
 * https://medium.com/@artikozel/decred-infrastructure-interviews-stephen-founder-of-crypto-only-luxury-goods-marketplace-68d3214a4fd7
+* https://weeklyglobalresearch.wordpress.com/2019/01/31/decred-dcr-review/
 
 Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
@@ -232,7 +248,8 @@ Translations:
 Videos:
 
 * Why 2019 will be the biggest year for Decred by Hack Crypto - interview with @joshuam from TNABC https://www.youtube.com/watch?v=Kyihc6Uh4XA
-* Decred Realized Disputes in Blockchain Projects Were Inevitable: Joshua Buirski by Bitsonline from TNABC https://www.youtube.com/watch?v=CUxDxJ4YAUA
+* Decred Realized Disputes in Blockchain Projects Were Inevitable: Joshua Buirski by Bitsonline from TNABC ([youtube](https://www.youtube.com/watch?v=CUxDxJ4YAUA), [bitsonline.com](https://bitsonline.com/decred-disputes-inevitable-buirski/))
+* Governance: Blockchain's Most Overlooked Pillar talk by @oregonisaac from Token Forum 2 conference ([tfblock.io](https://www.tfblock.io/post/governance-blockchain-s-most-overlooked-pillar))
 
 Audio:
 
@@ -256,7 +273,7 @@ Community stats:
 
 Comm systems news:
 
-* @sambiohazard wrote an excellent plan to address Discord spam and avoid un-bridging it.
+* @sambiohazard wrote an excellent plan to address Discord spam, implemented it, reported on first few weeks. With this in place we can finally appreciate Discord as an opportunity to onboard more people. Thank you!
 * https://github.com/xaur/decred-issues/issues/16
 * landing page for new matrix users https://github.com/decred/dcrweb/pull/462
 
@@ -302,9 +319,15 @@ Updated version of the "forkonomy" research by Wassim Alsindi (@parallelind) was
 
 Hcash forked a few [more](https://archive.today/rEhWX) Decred projects: [Autonomy](https://archive.today/KTCdX) (Politeia), [hcexplorer](https://archive.today/2KTtW) and [hctime](https://archive.today/K151A). In Politeia, they accidently [removed](https://archive.today/ECplt) copyright of Decred developers and forgot to rename the project. After being notified they quickly reacted by removing multiple repositories from TKFORKED account,  [reinstating](https://github.com/TKFORKED/autonomy/commit/4b05c2c31829df64be69e546d939a563247e1927) the license and [renaming](https://github.com/TKFORKED/autonomy/commit/98d5f63f676e45e6a91eba99da3db985effdb1f2) the Politeia fork to Autonomy. A few [missed](https://twitter.com/michae2xl/status/1084270468234915840) subtle Decred icons were fixed. Some [projects](https://archive.today/https://github.com/HcashOrg/hc*) were forked with their commit history erased and without marking them as forks on GitHub. Complaints on their subreddit were silently censored without reply ([1](https://www.reddit.com/r/hcash/comments/adwmx2/hcash_being_shady_again/), [2](https://www.reddit.com/r/hcash/comments/afepsc/hcash_cant_be_bothered_to_change_the_decred_logo/). Discussed [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154696507010921TRgid:decred.org).
 
+Grin [struggles](https://www.grin-forum.org/t/solved-early-disappointments/3682) to get funding.
+
+Another [sad example](https://twitter.com/BrianDColwell/status/1090286752831434752) of what can happen when the team runs out of money.
+
 {DEX}
 
 {related exchanges and websites}
+
+[Staked](https://staked.us/about/), a startup that provides staking services for institutional investors, raised $4.5M from Pantera, Coinbase, DCG and others. Covered by [CoinDesk](https://www.coindesk.com/pantera-coinbase-join-4-5-million-round-in-staking-as-a-service-startup), [The Block](https://www.theblockcrypto.com/2019/01/31/winklevoss-twins-pantera-get-behind-a-new-business-thats-capitalizing-on-a-new-trend-sweeping-crypto-hedge-funds/) and [Bloomberg](https://www.bloomberg.com/news/articles/2019-02-01/some-crypto-investors-are-playing-it-safe-after-volatile-run). Staked operates a [VSP](https://decred.staked.us/) that launched in Nov 2018.
 
 Coinbase [banned](https://cryptocoinspy.com/coinbase-bans-gab-again/). Good reminder of the old but still very relevant mantra: "not your keys not your coins". This is [not the first](https://www.cnbc.com/2018/04/23/coinbase-suspends-wikileaks-bitcoin-account.html) big case of account suspension.
 
