--- a/journal/201901.md
+++ b/journal/201901.md
@@ -12,7 +12,13 @@
 
 [dcrd](https://github.com/decred/dcrd):
 
-An issue was discovered during the testing of RC1: the change to reverse UTXO set semantics accidently corrected wrong behavior in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to fix it. {comment on impact} The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and will be included in the final v1.4 release. The fix and vote was prioritized because it is necessary for Lightning Network.
+An issue was discovered during the testing of RC1: the change to reverse UTXO set semantics accidently corrected wrong behavior in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to fix it. {comment on impact}
+
+The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and will be included in the final v1.4 release. The fix and vote was prioritized because it is necessary for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks.
+
+Side effect of the fix work was [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of the tests in that area.
+
+Discussion started how to further improve stake difficulty (ticket price) algorithm by removing oscillations https://github.com/decred/dcrd/issues/1593
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
@@ -35,7 +41,7 @@ An issue was discovered during the testing of RC1: the change to reverse UTXO se
 
 https://www.reddit.com/r/decred/comments/am7j40/decred_wallet_for_android_v10_released/
 
-[dcrios](https://github.com/raedahgroup/dcrios): {}
+[dcrios](https://github.com/raedahgroup/dcrios): preview is [available](https://testflight.apple.com/join/dvq51tCh) on Apple TestFlight.
 
 Trezor: {}
 
@@ -43,11 +49,11 @@ Trezor: {}
 
 * @buck54321 is exterminating imperative jQuery code https://github.com/decred/dcrdata/pull/915
 * HTTPS is now [enforced](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154818146313660CWvZy:decred.org) on explorer.dcrdata.org and mainnet.dcrdata.org
-* Team is preparing for stress testing of Insight API _(they call it torture testing, ouch)_.
+* New home page design is [advancing](https://github.com/decred/dcrdata/pull/921) (also [this](https://github.com/decred/dcrdata/pull/961)).
+* Team is preparing stress testing of Insight API _(they call it torture testing, ouch)_.
+* Exchange rate monitoring was implemented in the backend to enable some UI features: https://github.com/decred/dcrdata/pull/951
 
-WIP:
-
-* Exchange rate monitoring to enable features that depend on it: https://github.com/decred/dcrdata/pull/951
+Check the reworked new home page at [beta.dcrdata.org](https://beta.dcrdata.org/).
 
 Ticket splitting:
 
@@ -58,13 +64,17 @@ Ticket splitting:
 * Guide for [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/)
 * [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) guide by @jz was polished and added to the docs.
 * new [Address Details](https://docs.decred.org/advanced/address-details/) page explains address format an lists all possible kinds of addresses
+* Consensus Vote Archive moved to [its own page](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/)
+* multiple additions to [Glossary](https://docs.decred.org/glossary/)
+
 * deep dive security discussion in #documentation, it will be beneficial to the whole space to assemble thorough OPSEC guidelines https://github.com/xaur/decred-issues/issues/101
 
 [decred.org](https://github.com/decred/dcrweb):
 
 * huge effort is [ongoing](https://github.com/decred/dcrweb/pull/491) by @peter\_zen to migrate the site to Hugo (static site generator written in Go) is complete. This makes updating site content much easier. {comment from @peter\_zen or other devs why it's cool} {is it deployed at decred.org?}
 * speed optimizations {right?} https://github.com/decred/dcrweb/pull/513
-* {comment on SRI: what is it, what was before, what is now, why it's cool}
+* {comment on SRI: what is it, what was before, what is now, why it's cool} https://github.com/decred/dcrweb/issues/517
+* [voting.decred.org](https://voting.decred.org/) dashboard is being [updated](https://github.com/decred/hardforkdemo/commits/master) in preparation for the upcoming consensus vote.
 
 Other:
 
@@ -72,6 +82,7 @@ Other:
 * More terminology changes in dcrwallet, dcrdocs and dcrweb
 * {comment on contractor-mgmt sndurkin? is it worth mentioning it yet?}
 * projects are gradually switching to a faster golangci-lint linter
+* more security headers [added](https://github.com/decred/dcrweb/pull/537) on decred.org
 * github now allows private repos on free accounts https://github.blog/2019-01-07-new-year-new-github/
 
 Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
@@ -113,6 +124,8 @@ Discussions:
 Hashrate: {start, end, low, high, variation; pool distribution}
 
 Staking: {30-day average tix price, low, high, locked DCR million and % of avail supply}
+
+There were 90 total split tickets in January: 41 on decredvoting and 49 on decredbrasil. [Data](https://gist.github.com/oregonisaac/8eb4d50af9fa888c920666fb73ba44b2) since May 2018 shows a steady growth.
 
 Nodes: {node counts, version distribution}
 
@@ -268,7 +281,7 @@ Community stats:
 * Telegram users: {} (+{})
 * YouTube subscribers: {} (+{})
 * Facebook followers: {} (+{}), likes: {} (+{})
-* LinkedIn followers: Decred page {} (+{}), Politeia page {} (+{})
+* LinkedIn followers: Decred page 466 (+16), Politeia page 27 (+3)
 * GitHub dcrd stars: {} (+{}), forks: {} (+{})
 
 Comm systems news:
@@ -278,6 +291,8 @@ Comm systems news:
 * landing page for new matrix users https://github.com/decred/dcrweb/pull/462
 
 More [criticism](https://twitter.com/tonevays/status/1086702239853379584) from Bitcoin maximalists triggered a [discussion](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/) on how Decred looks in context of securities laws. One vector critics use is that Decred's premine and airdrop was not fair and "hand selected". This is a misrepresentation of the (huge) manual effort to filter out airdrop cheaters, per [this discussion]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154810656412322VrQLg:decred.org) that also has many useful links describing Decred's launch. One interesting insight shared there is that ~300k (35%) airdropped coins never moved. Another related [chat](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$15467943549316LjeYZ:decred.org) was about Twitter attacks claiming how Decred's initial distribution was not transparent or fair, while avoiding inconvenient facts about Bitcoin's early mining. Finally, this [history lesson](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15467944729319gvTvt:decred.org) explained early days of staking and made a point that original devs had no unilateral control of consensus rules from day 1.
+
+[decred-issues](https://github.com/xaur/decred-issues) has grown to 102 issues as of Feb 6. Check it out, perhaps you'll find something interesting to do!
 
 * {other convos}
 
@@ -328,6 +343,8 @@ Another [sad example](https://twitter.com/BrianDColwell/status/10902867528314347
 {related exchanges and websites}
 
 [Staked](https://staked.us/about/), a startup that provides staking services for institutional investors, raised $4.5M from Pantera, Coinbase, DCG and others. Covered by [CoinDesk](https://www.coindesk.com/pantera-coinbase-join-4-5-million-round-in-staking-as-a-service-startup), [The Block](https://www.theblockcrypto.com/2019/01/31/winklevoss-twins-pantera-get-behind-a-new-business-thats-capitalizing-on-a-new-trend-sweeping-crypto-hedge-funds/) and [Bloomberg](https://www.bloomberg.com/news/articles/2019-02-01/some-crypto-investors-are-playing-it-safe-after-volatile-run). Staked operates a [VSP](https://decred.staked.us/) that launched in Nov 2018.
+
+Binance now [allows](https://support.binance.com/hc/en-us/articles/360022498052) to buy crypto with Visa and MasterCard (and the list of [restrictions](https://support.binance.com/hc/en-us/articles/360022204152) tells something about fiat).
 
 Coinbase [banned](https://cryptocoinspy.com/coinbase-bans-gab-again/). Good reminder of the old but still very relevant mantra: "not your keys not your coins". This is [not the first](https://www.cnbc.com/2018/04/23/coinbase-suspends-wikileaks-bitcoin-account.html) big case of account suspension.
 
