--- a/journal/201901.md
+++ b/journal/201901.md
@@ -40,13 +40,13 @@ Trezor: {any news?}
 
 [dcrdata](https://github.com/decred/dcrdata): New home page design is [advancing](https://github.com/decred/dcrdata/pull/921). Values on the home page now [update automatically](https://github.com/decred/dcrdata/pull/961) when new block is found. Exchange rate monitoring was [added](https://github.com/decred/dcrdata/pull/951) to the backend that enables showing USD values on the UI. HTTPS is now enforced on `explorer` and `mainnet` subdomains ([discussion](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154818146313660CWvZy:decred.org)).
 
-Check the reworked home page and other new features at [beta.dcrdata.org](https://beta.dcrdata.org/).
+Check the reworked home page and other new features at [beta.dcrdata.org](https://beta.dcrdata.org/), which hosts beta version of the upcoming v4 release.
 
 Dev side: @buck54321 is [destroying](https://github.com/decred/dcrdata/pull/915) imperative jQuery code. Team is preparing stress testing of Insight API _(they call it torture testing, ouch)_.
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): Internal code improvements, preliminary work for Decrediton integration. A [monitoring page](https://mainnet-split-tickets.matheusd.com/) was set up that shows active splitting sessions from both VSPs that support it.
 
-[docs](https://github.com/decred/dcrdocs): New pages: [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/) outlines configuration requirements and desired skillset of VSP operators, [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) is based on the guide by @jz, [Address Details](https://docs.decred.org/advanced/address-details/) page explains address format an lists all possible kinds of addresses, [Consensus Vote Archive](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/) moved to its own page. [Glossary](https://docs.decred.org/glossary/) received multiple additions.
+[docs](https://github.com/decred/dcrdocs): New pages: [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/) outlines configuration requirements and desired skillset of VSP operators, [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) is based on the guide by @jz, [Address Details](https://docs.decred.org/advanced/address-details/) page explains address format an lists all possible kinds of addresses, [Contributing to Decred](https://docs.decred.org/contributing/contributing-to-decred/) explains how to become a paid Decred contractor. [Consensus Vote Archive](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/) moved to its own page. Multiple terms were added to [Glossary](https://docs.decred.org/glossary/).
 
 Deep dive security discussion in #documentation concluded that it is possible to assemble general [computer security guidelines](https://github.com/xaur/decred-issues/issues/101) that will be beneficial for the whole space.
 
@@ -78,7 +78,7 @@ Congratulations to 6 new contributors [listed](https://github.com/decred/dcrweb/
 
 4 inactive developers [removed](https://github.com/decred/dcrweb/issues/528) from decred.org: Cruz Molina (@freethinkingaway, dcrdata), Huy Nguyen Tuan (@huyntsgs, dcrwallet), Macaulay Davies (@mcedward), Rohit Nagori.
 
-Independent Decred contractors [published](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) their plans for 2019 which faced mixed feedback [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15476119656176jVTYW:decred.org).
+Independent Decred contractors [published](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) their plans for 2019, [discussed](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15476119656176jVTYW:decred.org) in #marketing.
 
 ## Governance
 
